--- a/vpns.html
+++ b/vpns.html
@@ -70,9 +70,9 @@ They offer round-the-clock customer support, providing assistance and answering 
 <h1>Unblocks Geo-Restrictions</h1>
 ExpressVPN is highly effective at bypassing geo-restrictions, making it an excellent choice for accessing global content, including streaming services from different regions.
 These features make ExpressVPN a top-tier choice for anyone seeking a reliable, fast, and secure VPN service.
-<h1>2. SurfShark</h1>
+<h1>2. </h1>
 <div class="image-container2">
-<img src="https://www.01net.com/en/app/uploads/2022/08/Surfshark-Review.jpeg" alt="ExpressVPN">
+<img src="./Surfshark.webp" alt="ExpressVPN">
 </div>
     <h1>Comprehensive Security and Privacy</h1>
     <p>Surfshark stands out with its top-notch security measures. The VPN uses strong encryption to keep your data safe, ensuring that your online activities remain private. Its strict no-logs policy means they don't track or store your browsing history, giving you peace of mind about your digital privacy.</p>
