--- a/index.html
+++ b/index.html
@@ -38,7 +38,7 @@
 <p>When engaging in online communication, it's crucial to ensure that your conversations remain private and secure. In today's digital age, where data breaches and surveillance are increasingly common, taking steps to protect your privacy is more important than ever. You wouldn't want a company or unauthorized third parties to have access to your personal conversations or see what you're doing online. This includes not only the content of your messages but also any shared files, photos, or sensitive information.</p>
         <div class="image-container">
             <img src="./signal.png" alt="Image 2">
-            <img src="https://upload.wikimedia.org/wikipedia/commons/thumb/8/83/Telegram_2019_Logo.svg/800px-Telegram_2019_Logo.svg.png" alt="Image 3">
+            <img src="./tele.png" alt="Image 3">
         </div>
     
         <h2>Search Privately</h2>
